--- a/TODO.txt
+++ b/TODO.txt
@@ -2,8 +2,12 @@ Ideas:
 
 Server:
 1. Modify code to create segements of variable size (1 sec, 2 sec)
-2. Check for HTTP 1.1 persistent connections for different segments being transmitted over the same TCP connection
+   Bent04 which is used to create the segments can be used
+   to segment the media file into variable sizes.
 
+2. Check for HTTP 1.1 persistent connections for different segments being transmitted over the same TCP connection
+   urllib2.urlopen uses HTTP/1.1 which uses HTTP persistent
+   connections by default.
 
 Client:
 
@@ -15,4 +19,4 @@ Client:
 Code:
 
 
-1. Chnage the Class object for media in the read_mpd file to dictionaries
+1. Change the Class object for media in the read_mpd file to dictionaries
